--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,15 +25,15 @@ jobs:
         pip install -r requirements.txt
 
 
-    - name: Lint with flake8
-      run: |
-        pip install flake8
-        flake8 backend --max-line-length=88
-
-    - name: Format with Black
-      run: |
-        pip install black
-        black --check backend  #--check to only check formatting without making changes
+#    - name: Lint with flake8
+#      run: |
+#        pip install flake8
+#        flake8 backend --max-line-length=88
+#
+#    - name: Format with Black
+#      run: |
+#        pip install black
+#        black --check backend  #--check to only check formatting without making changes
     
 
     - name: Run tests with pytest
