--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,16 +24,16 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Format with Black
-      run: |
-        pip install black
-        black backend  #--check to only check formatting without making changes
+#    - name: Format with Black
+#      run: |
+#        pip install black
+#        black --check --diff backend  #--check to only check formatting without making changes
     
 
-    - name: Lint with flake8
-      run: |
-        pip install flake8
-        flake8 backend --max-line-length=88
+#    - name: Lint with flake8
+#      run: |
+#        pip install flake8
+#        flake8 backend \--max-line-length=88\--extend-ignore=E203,W503
 
 
     - name: Run tests with pytest
