--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ anyio==4.11.0
 bcrypt==4.2.1
 certifi==2025.10.5
 colorama==0.4.6
+email-validator==2.2.0
 fastapi==0.119.1
 h11==0.16.0
 httpcore==1.0.9
