--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,9 @@ pydantic==2.12.3
 pydantic_core==2.41.4
 Pygments==2.19.2
 pytest==8.4.2
+pytest-asyncio==0.24.0
+pytest-cov==5.0.0
+pytest-html==4.1.1
 sniffio==1.3.1
 starlette==0.48.0
 typing-inspection==0.4.2
