--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,15 +37,16 @@ jobs:
 
     - name: Run tests with pytest
       run: |
-        pip install pytest pytest-cov pytest-html-reporter
+        pip install pytest pytest-cov pytest-reporter-plus
         PYTHONPATH=$PYTHONPATH:$(pwd) pytest \
           --cov=backend \
           --cov-report=xml \
           --cov-report=html \
           --cov-report=term \
           --junitxml=pytest-report.xml \
-          --html-report=./pytest-report \
-          --title="Pytest Test Report" \
+          --html-output=./pytest-report \
+          --generate-xml \
+          --xml-report=pytest-report-combined.xml \
           backend/tests/ \
           --disable-warnings \
           -v
@@ -64,6 +65,14 @@ jobs:
       with:
         name: pytest-junit-xml
         path: pytest-report.xml
+        retention-days: 30
+
+    - name: Upload pytest report (Combined XML)
+      uses: actions/upload-artifact@v4
+      if: always()
+      with:
+        name: pytest-combined-xml
+        path: pytest-report-combined.xml
         retention-days: 30
 
     - name: Upload coverage report (HTML)
