--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ Pygments==2.19.2
 pytest==8.4.2
 pytest-asyncio==0.24.0
 pytest-cov==5.0.0
-pytest-html-reporter==0.2.9
+pytest-reporter-plus==0.3.6
 sniffio==1.3.1
 starlette==0.48.0
 typing-inspection==0.4.2
