Add Docker support (Dockerfile, .dockerignore, docker-compose.yml) for easy containerized development and deployment. Enable auto-reload for FastAPI in development. Fix Pydantic deprecation warning by using model_dump() instead of dict(). Add pytest-asyncio to requirements for async test support. Remove deprecated asyncio_mode from pytest.ini. All tests now pass and warnings are resolved.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
+# For async test support
+pytest-asyncio
+# For running FastAPI with ASGI server
+uvicorn[standard]
 annotated-types==0.7.0
 anyio==4.11.0
 bcrypt==4.2.1
