--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.555.0",
     "next": "16.0.7",
     "react": "19.2.0",
